src/test/ui/borrowck/issue-64453.stderr
error[E0658]: `match` is not allowed in a `static`
  --> $DIR/issue-64453.rs:4:31
   |
LL | static settings_dir: String = format!("");
   |                               ^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/49146
   = help: add `#![feature(const_if_match)]` to the crate attributes to enable
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
